[package]
name = "jiao"
version = "0.2.1"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
description = "Cross platform 2D rendering engine"
homepage = "https://github.com/RustVis/jiao"
repository = "https://github.com/RustVis/jiao"
documentation = "https://docs.rs/jiao"
readme = "README.md"
categories = [
  "computer-vision",
  "graphics",
  "rendering",
  "visualization",
]
keywords = [
  "2d",
  "canvas",
  "painting",
  "rendering",
  "svg",
]
edition = "2021"
license = "Apache-2.0"
publish = true

[features]
default = []
cairo = ["cairo-rs"]
qt = ["cpp_core", "qt_gui"]
skia = ["skia-safe"]
web = ["web-sys", "js-sys", "wasm-bindgen"]

[dependencies]
cairo-rs = { version = "0.16.7", features = ["glib", "png", "svg", "pdf"], optional = true }
cfg-if = "1.0.0"
cpp_core = { version = "0.6.0", optional = true }
float-cmp = "0.9.0"
js-sys = { version = "0.3.60", optional = true }
lazy_static = "1.4.0"
log = "0.4.17"
qt_gui = { version = "0.5.0", optional = true }
serde = { version = "1.0.152", features = ["derive"] }
skia-safe = { version = "0.58.0", optional = true }
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"], optional = true }

[dependencies.web-sys]
version = "0.3.60"
optional = true
features = [
    "CanvasRenderingContext2d",
    "Document",
    "HtmlCanvasElement",
    "HtmlElement",
    "Path2d",
    "SvgElement",
    "Window",
]

[dev-dependencies]
serde_json = "1.0.91"
