[package]
name = "canvas"
version = "0.1.0"
edition = "2021"

[features]
default = ["gtk"]
qt = ["qt_gui"]
wasm = ["web-sys"]

[dependencies]

[dependencies.qt_gui]
version = "0.5"
optional = true

[dependencies.gtk]
version = "0.15.1"
optional = true

[dependencies.web-sys]
version = "0.3.55"
optional = true
features = ["CanvasRenderingContext2d"]
