[package]
name = "jiao-cms"
version = "0.1.0"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
description = "math library for jiao"
homepage = "https://github.com/RustVis/jiao"
repository = "https://github.com/RustVis/jiao"
documentation = "https://docs.rs/jiao-cms"
readme = "README.md"
categories = [
  "computer-vision",
  "graphics",
  "rendering",
  "visualization",
]
keywords = [
  "2d",
  "canvas",
  "painting",
  "rendering",
  "svg",
]
edition = "2021"
license = "LGPL-3.0"
publish = true
rust-version = "1.61.0"

[dependencies]
