[package]
name = "jiao-skia"
version = "0.3.5"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
description = "Cross platform 2D painting engine (skia binding part)"
homepage = "https://github.com/RustVis/jiao"
repository = "https://github.com/RustVis/jiao"
documentation = "https://docs.rs/jiao-skia"
readme = "README.md"
categories = [
  "computer-vision",
  "graphics",
  "rendering",
  "visualization",
]
keywords = [
  "2d",
  "canvas",
  "painting",
  "skia",
  "pdf",
]
edition = "2021"
license = "Apache-2.0"
publish = true

[dependencies]
jiao = { path = "../jiao", version = "0.3.5" }
log = "0.4.17"
skia-safe = "0.58.0"
