[package]
name = "jiao-web"
version = "0.3.5"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
description = "Cross platform 2D painting engine (web/wasm binding part)"
homepage = "https://github.com/RustVis/jiao"
repository = "https://github.com/RustVis/jiao"
documentation = "https://docs.rs/jiao-web"
readme = "README.md"
categories = [
  "computer-vision",
  "graphics",
  "rendering",
  "visualization",
]
keywords = [
  "2d",
  "canvas",
  "painting",
  "wasm",
  "web",
]
edition = "2021"
license = "Apache-2.0"
publish = true

[dependencies]
jiao = { path = "../jiao", version = "0.3.5" }
js-sys = "0.3.64"
log = "0.4.19"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }

[dependencies.web-sys]
version = "0.3.64"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "HtmlCanvasElement",
    "HtmlElement",
    "Path2d",
    "SvgElement",
    "Window",
]
