[package]
name = "jiao"
version = "0.3.4"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
description = "Cross platform 2D rendering engine"
homepage = "https://github.com/RustVis/jiao"
repository = "https://github.com/RustVis/jiao"
documentation = "https://docs.rs/jiao"
readme = "README.md"
categories = [
  "computer-vision",
  "graphics",
  "rendering",
  "visualization",
]
keywords = [
  "2d",
  "canvas",
  "painting",
  "rendering",
  "svg",
]
edition = "2021"
license = "Apache-2.0"
publish = true

[dependencies]
float-cmp = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.93"
