[package]
name = "cr-example"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-rs = { version = "0.16.7", features = ["glib", "png", "svg", "pdf"] }
gdk = "0.16.2"
gio = "0.17.0"
gtk = "0.16.2"
jiao = { path = "../..", features = ["cairo"] }
paint_shapes = { path = "../paint_shapes", features = ["cairo"] }
