[package]
name = "cr-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cairo-rs = { version = "0.17.0", features = ["glib", "png", "svg", "pdf"] }
gdk = "0.17.0"
gio = "0.17.0"
gtk = "0.17.0"
jiao = { path = "../..", features = ["cairo"] }
paint_shapes = { path = "../paint_shapes", features = ["cairo"] }
