[package]
name = "cr-example"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-rs = { version = "0.16.7", features = ["glib", "png", "svg", "pdf"] }
jiao = { path = "../../crates/jiao" }
jiao-cairo = { path = "../../crates/jiao-cairo" }
jiao-shapes = { path = "../../crates/jiao-shapes", features = ["cairo"] }
