[package]
name = "example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
jiao = { path = "../../crates/jiao" }
log = "0.4.18"
jiao-shapes = { path = "../../crates/jiao-shapes", features = ["web"] }
paint-shapes = { path = "../paint-shapes", features = ["web"] }
wasm-bindgen = "0.2.86"
wasm-logger = "0.2.0"
web-sys = "0.3.63"
yew = { version = "0.20.0", features = ["csr"] }
